fix image container alignment for middle resolutions

--- a/src/components/DataView/styles.scss
+++ b/src/components/DataView/styles.scss
@@ -9,7 +9,10 @@
     color:black;
 }
 .drawerImageContainer{
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .drawerImage{
     width: 150px;
